@@ -2,8 +2,12 @@
 
 Griffith ChangeLog
 ------------------
-(c) 2005-2008  Vasco Nunes, Piotr Ożarowski
+(c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
+
+2009-01-15  Michael Jahn
+	* Amazon movie plugin updated
+	* better results for amazon poster search
 
 2009-01-06  Michael Jahn
 	* MovieFone movie plugin updated
